# ICICSO

./: .dockerignore  .gitattributes  .gitignore  CONNECTION_FIXES.md  ICICSO-LOCAL.cmd  Launch-ICICSO-Continuum.cmd  NEXT_ACTIONS.md  README.md  START_HERE.md  SYSTEM_STATUS.md  docker-compose.yml  package.json  pnpm-lock.yaml  start-icicso.bat  start-icicso.sh  tsconfig.json
.A Imagen/: Poster ICICSO.html
icicso-local/: .env.example  .gitignore  DOCKER_COMPOSE_USAGE.md  README.md  docker-compose.override.yml  docker-compose.yml  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  services.Dockerfile  tsconfig.base.json  tsconfig.json  turbo.json  vite.config.ts
icicso-local/.data/: block1-store.json  block2-store.json  block3-evidence-lake.json  block5-ghl-kbol.json  block6-runbook-readiness.json  block7-case-control.json  block8-systemic-control.json
icicso-local/apps/audit-service/: Dockerfile  package.json
icicso-local/apps/auth-service/: Dockerfile  package.json
icicso-local/apps/case-control-service/: Dockerfile  package.json
icicso-local/apps/cqoi-service/: Dockerfile  package.json
icicso-local/apps/data-governance-service/: Dockerfile  package.json
icicso-local/apps/desktop-emulator/: Dockerfile  README.md  app.js  audit-links.html  dark-override.css  index.html  repo-html-hub.html  server.js  styles.css
icicso-local/apps/evidence-lake-service/: Dockerfile  package.json
icicso-local/apps/gateway-api/: Dockerfile  package.json
icicso-local/apps/ghl-service/: Dockerfile  package.json
icicso-local/apps/identity-service/: Dockerfile  package.json
icicso-local/apps/ingestion-service/: Dockerfile  package.json
icicso-local/apps/kbol-service/: Dockerfile  package.json
icicso-local/apps/readiness-service/: Dockerfile  package.json
icicso-local/apps/runbook-service/: Dockerfile  package.json
icicso-local/apps/storage-service/: Dockerfile  package.json
icicso-local/apps/systemic-risk-service/: Dockerfile  package.json
icicso-local/apps/terminology-service/: Dockerfile  package.json
icicso-local/docs/: BLOCK1_SERVICES.md  BLOCK3_EVIDENCE_LAKE.md  BLOCK5_GHL_KBOL.md  BLOCK6_RUNBOOK_READINESS.md  BLOCK7_CASE_CONTROL.md  BLOCK8_SYSTEMIC_CONTROL.md  BLOQUE_2_INGESTION_GOBERNANZA.md  block-2-data-certification.md
icicso-local/engines/13_semantic_terminology_engine/: Dockerfile  README.md  pyproject.toml
icicso-local/scripts/: Start-Block1-Services.ps1  Start-Block3-Services.ps1  Start-Block5-Services.ps1  Start-Block6-Services.ps1  Start-Block7-Services.ps1  Start-Block8-Services.ps1
icicso-local/src/cli/: icicso-run.ts  icicso-trace.ts  paths.ts
icicso-local/src/core/: layer-result.ts  types.ts
icicso-local/src/domains/: bom.ts  cccl.ts  cml.ts  cqoi.ts  el.ts  ete.ts  eul.ts  evt.ts  ghl.ts  igl.ts  kbol.ts  lccb.ts  rdyg.ts  ro.ts  srm.ts  tam.ts  tg.ts
icicso-local/src/engine/: output.ts  pipeline.ts
icicso-local/src/fixtures/: cabg-x3-dm2-nstemi.ts
icicso-local/src/viewer/: main.ts  styles.css
icicso-local/tests/: pipeline.test.ts
services/ingestion-orquestador/: .gitignore  README.md  pyproject.toml
(+715 files in other folders)
